push Transaction for graph DB behind facade. WIP on removing use of deprecated methods on graphDB